YAML/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workload
spec:
  replicas: 6
  selector:
    matchLabels:
      app: workload
  template:
    metadata:
      labels:
        app: workload
        color: magenta
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.azure.com/mode: user
      containers:
      - name: nginx
        image: nginx:1.18
        ports:
        - containerPort: 80
          protocol: TCP
        resources: 
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
