YAML/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pich-banck-service
spec:
  selector:
    app: pich-banck
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
