YAML/api_service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pich-banck-service-lb
spec:
  selector:
    app: pich-banck
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
